--- a/index/templates/index/results_base.html
+++ b/index/templates/index/results_base.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+{% extends extend|yesno:'ajax.html,index/index.html' %}
 
 {% block title %}
 dopepod
@@ -11,91 +11,108 @@ dopepod
       {{ results_header }}
     </div>
     <div class="col-auto results-options">
-      <ul>
-        {% if selected_genre %}
-        <li>
-          <a class="btn btn-dope btn-dope-tab toggle active" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
-            {{ selected_genre }}
-          </a>
-        </li>
-        {% else %}
-        <li>
-          <a class="btn btn-dope btn-dope-tab toggle" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
-            Genre
-          </a>
-        </li>
-        {% endif %}
-        {% if selected_language %}
-        <li>
-          <a class="btn btn-dope btn-dope-tab toggle active" data-toggle="collapse" href="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
-            {{ selected_language }}
-          </a>
-        </li>
-        {% else %}
-        <li>
-          <a class="btn btn-dope btn-dope-tab toggle" data-toggle="collapse" href="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
-            Language
-          </a>
-        </li>
-        {% endif %}
-      </ul>
+      {% if podcasts %}
+        <ul>
+          {% if selected_genre %}
+            <li>
+              <a class="btn btn-dope btn-dope-tab active toggle" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+                Genre
+              </a>
+            </li>
+          {% else %}
+            <li>
+              <a class="btn btn-dope btn-dope-tab toggle" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+                Genre
+              </a>
+            </li>
+          {% endif %}
+          {% if selected_language %}
+            <li>
+              <a class="btn btn-dope btn-dope-tab active toggle" data-toggle="collapse" href="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
+                Language
+              </a>
+            </li>
+          {% else %}
+            <li>
+              <a class="btn btn-dope btn-dope-tab toggle" data-toggle="collapse" href="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
+                Language
+              </a>
+            </li>
+          {% endif %}
+        </ul>
+      {% endif %}
     </div>
   </div>
   {% if selected_q %}
   <form id="results-form" method="GET" action="{% url 'search' %}">
+  {% elif subscriptions %}
+  <form id="subscriptions-form" method="GET" action="{% url 'subscriptions' %}">
   {% else %}
   <form id="results-form" method="GET" action="{% url 'browse' %}">
   {% endif %}
   <div class="row options-select color-1">
-    {% if selected_alphabet %}
-      <input type="hidden" id="selected_alphabet" name="selected_alphabet" value="{{ selected_alphabet }}">
-    {% endif %}
-    {% if selected_q %}
-      <input type="hidden" id="selected_q" name="selected_q" value="{{ selected_q }}">
-    {% endif %}
+    <div class="options-group" id="genre-buttons" data-toggle="buttons">
+      <div class="col-auto ml-auto">
+        {% if selected_alphabet %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="alphabet" value="{{ selected_alphabet }}" checked>
+            {{ selected_alphabet }}
+          </label>
+        {% endif %}
+        {% if selected_q %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="q" value="{{ selected_q }}" checked>
+            {{ selected_q }}
+          </label>
+        {% endif %}
+        {% if selected_genre %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="genre" value="{{ selected_genre }}" checked>
+            {{ selected_genre }}
+          </label>
+        {% endif %}
+        {% if selected_language %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="language" value="{{ selected_language }}" checked>
+            {{ selected_language }}
+          </label>
+        {% endif %}
+      </div>
       <div class="collapse" id="genre-collapse">
         {% if genres %}
-          <div class="options-group" id="genre-buttons" data-toggle="buttons">
-            <ul id="options-field">
-              {% if selected_genre %}
-                <li>
-                  <label class="btn btn-dope options-button">
-                    <input class="field-button" type="radio" name="genre" value="All">
-                    All
-                  </label>
-                </li>
-              {% else %}
-                <li>
-                  <label class="btn btn-dope options-button active">
-                    <input class="field-button" type="radio" name="genre" value="All" checked>
-                    All
-                  </label>
-                </li>
-              {% endif %}
-              {% for genre in genres %}
-              {% if selected_genre == genre.name %}
-              <li>
-                <label class="btn btn-dope options-button active">
-                  <input class="field-button" type="radio" name="genre" value="{{ genre.name }}" checked>
-                  {{ genre.name }}
-                </label>
-              </li>
-              {% else %}
+          <ul id="options-field">
+            {% if selected_genre %}
               <li>
                 <label class="btn btn-dope options-button">
-                  <input class="field-button" type="radio" name="genre" value="{{ genre.name }}">
-                  {{ genre.name }}
+                  <input class="field-button" type="radio" name="genre" value="All">
+                  All
                 </label>
               </li>
+            {% else %}
+              <li>
+                <label class="btn btn-dope options-button active">
+                  <input class="field-button" type="radio" name="genre" value="All" checked>
+                  All
+                </label>
+              </li>
+            {% endif %}
+            {% for genre in genres %}
+              {% if not selected_genre == genre.name %}
+                <li>
+                  <label class="btn btn-dope options-button">
+                    <input class="field-button" type="radio" name="genre" value="{{ genre.name }}">
+                    {{ genre.name }}
+                  </label>
+                </li>
               {% endif %}
             {% endfor %}
             </ul>
-          </div>
-        {% endif %}
+          {% endif %}
+        </div>
       </div>
       <div class="collapse" id="language-collapse">
         {% if languages %}
-        <div class="options-group color-1" id="language-buttons" data-toggle="buttons">
+        <div class="options-group" id="language-buttons" data-toggle="buttons">
           <ul id="options-field">
             {% if selected_language %}
             <li>
@@ -113,21 +130,14 @@ dopepod
             </li>
             {% endif %}
             {% for language in languages %}
-            {% if selected_language == language.name %}
-            <li>
-              <label class="btn btn-dope options-button active">
-                <input class="field-button" type="radio" name="language" value="{{ language.name }}" checked>
-                {{ language.name }}
-              </label>
-            </li>
-            {% else %}
-            <li>
-              <label class="btn btn-dope options-button">
-                <input class="field-button" type="radio" name="language" value="{{language.name }}">
-                {{ language.name }}
-              </label>
-            </li>
-            {% endif %}
+              {% if not selected_language == language.name %}
+                <li>
+                  <label class="btn btn-dope options-button">
+                    <input class="field-button" type="radio" name="language" value="{{ language.name }}">
+                    {{ language.name }}
+                  </label>
+                </li>
+              {% endif %}
             {% endfor %}
           </ul>
         </div>
@@ -136,9 +146,9 @@ dopepod
   </div>
   <div class="row results-wrapper">
     <div class="col">
+      {% if podcasts.has_other_pages %}
         <div class="row pagination">
           <div class="col">
-            {% if podcasts.has_other_pages %}
             <div class="btn-group" id="page-buttons" data-toggle="buttons">
               <ul class="nav page-list">
                 {% if podcasts.has_previous %}
@@ -182,16 +192,16 @@ dopepod
                 {% endif %}
               </ul>
             </div>
-            {% endif %}
           </div>
         </div>
-        <div class="row">
-          {% block results_x %}
-          {% endblock %}
-        </div>
+      {% endif %}
+      <div class="row">
+        {% block results_x %}
+        {% endblock %}
+      </div>
+      {% if podcasts.has_other_pages %}
         <div class="row pagination">
           <div class="col">
-            {% if podcasts.has_other_pages %}
             <div class="btn-group" id="page-buttons" data-toggle="buttons">
               <ul class="nav page-list">
                 {% if podcasts.has_previous %}
@@ -235,9 +245,9 @@ dopepod
                 {% endif %}
               </ul>
             </div>
-            {% endif %}
           </div>
         </div>
+      {% endif %}
     </div>
   </div>
   </form>
