--- a/podcasts/templates/dashboard.html
+++ b/podcasts/templates/dashboard.html
@@ -4,7 +4,7 @@
       dashboard
     </h3>
     <p>
-      You have {{ subscriptions.count }} 
+      You have 0
       <a class="subscriptions-link" href="{% url 'subscriptions' %}">
         subscriptions
       </a>
