--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -1,67 +1,47 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+{% extends 'index/results_base.html' %}
 
 {% block title %}
 dopepod
 {% endblock %}
 
-{% block results %}
-<div class="col-auto color-1 results-bar">
-  <span class="results-header">
-    {{ results_header }}
-  </span>
-</div>
-<div class="col-12 results-wrapper">
-  <div class="row options">
-    <div class="col">
-      <div class="float-right" id="option-buttons">
-
+{% block results_x %}
+<div class="col">
+  {% for subscription in subscriptions %}
+    <div class="row">
+      <div class="col-auto">
+        <a class="show-podinfo" data-itunesid="{{ subscription.parent.itunesid }}" href="{% url 'podinfo' itunesid=subscription.parent.itunesid %}">
+          <img class="img-fluid" src="//images.weserv.nl/?url={{ subscription.parent.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
+        </a>
+      </div>
+      <div class="col">
+        <h5>
+          <a class="show-podinfo" data-itunesid="{{ subscription.parent.itunesid }}" href="{% url 'podinfo' itunesid=subscription.parent.itunesid %}">
+            {{ subscription.parent.title }}
+          </a>
+        </h5>
+        <h6>
+          <span>
+            By
+          </span>
+          <a class="show-podinfo" data-itunesid="{{ subscription.parent.itunesid }}" href="{% url 'podinfo' itunesid=subscription.parent.itunesid %}">
+            {{ subscription.parent.artist }}
+          </a>
+        </h6>
+        <p>
+          <span>
+            Last updated:
+          </span>
+          {{ subscription.get_last_updated }}
+        </p>
       </div>
     </div>
-  </div>
-  <form id="subscriptions-form" method="GET" action="{% url 'subscriptions' %}">
-    <div class="row options-select">
-    </div>
-  </form>
-  <div class="row results-list">
-    <div class="col">
-      {% for subscription in subscriptions %}
-        <div class="row">
-          <div class="col-auto">
-            <a class="show-podinfo" data-itunesid="{{ subscription.parent.itunesid }}" href="{% url 'podinfo' itunesid=subscription.parent.itunesid %}">
-              <img class="img-fluid" src="//images.weserv.nl/?url={{ subscription.parent.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
-            </a>
-          </div>
-          <div class="col">
-            <h5>
-              <a class="show-podinfo" data-itunesid="{{ subscription.parent.itunesid }}" href="{% url 'podinfo' itunesid=subscription.parent.itunesid %}">
-                {{ subscription.parent.title }}
-              </a>
-            </h5>
-            <h6>
-              <span>
-                By
-              </span>
-              <a class="show-podinfo" data-itunesid="{{ subscription.parent.itunesid }}" href="{% url 'podinfo' itunesid=subscription.parent.itunesid %}">
-                {{ subscription.parent.artist }}
-              </a>
-            </h6>
-            <p>
-              <span>
-                Last updated:
-              </span>
-              {{ subscription.get_last_updated }}
-            </p>
-          </div>
-        </div>
-        {% if not forloop.last %}
-          <hr class="h-line" />
-        {% endif %}
-      {% empty %}
-        <p>
-          No subscriptions
-        </p>
-      {% endfor %}
-    </div>
-  </div>
+    {% if not forloop.last %}
+      <hr class="h-line" />
+    {% endif %}
+  {% empty %}
+    <p>
+      No subscriptions
+    </p>
+  {% endfor %}
 </div>
 {% endblock %}
